@startuml
skinparam shadowing false
skinparam classAttributeIconSize 0
hide empty members
title Class Diagram - UC-26 Update Product

class "Admin Products UI" as UI <<boundary>>
class "ShoesController" as Controller <<controller>>
class "ShoesService" as Service <<service>>
class "Shoe" as Shoe <<domain>>
class "ShoeDetail" as ShoeDetail <<domain>>
class "ColorVariant" as ColorVariant <<domain>>
class "SizeStock" as SizeStock <<domain>>
class "Counter" as Counter <<domain>>
class "R2Service" as R2Service <<domain>>

UI --> Controller : PUT /shoes/:styleCode
Controller --> Service : delegates
Service --> Shoe : uses
Service --> ShoeDetail : uses
Service --> ColorVariant : uses
Service --> SizeStock : uses
Service --> Counter : uses
Service --> R2Service : uses

note right of UI
UC-26 - Update Product
Actors: Admin
Pre: Sản phẩm tồn tại
Post: Thông tin sản phẩm được cập nhật
end note
@enduml
